feat: Implement dashboard page with event, speaker, and participant cards
feat: Add routing for events feature with lazy loading components

feat: Create index file for events feature exports

feat: Implement event creation page with placeholder content

feat: Implement event details page with placeholder content

feat: Implement event edit page with placeholder content

feat: Implement events list page with data fetching and actions

feat: Create event service for API interactions

feat: Add routing for participants feature with lazy loading components

feat: Create index file for participants feature exports

feat: Implement participants list page with placeholder content

feat: Add routing for speakers feature with lazy loading components

feat: Create index file for speakers feature exports

feat: Implement speakers list page with placeholder content

feat: Create button component with various styles and loading states

feat: Create input text component with floating label and ngModel support

feat: Create select component with floating label and options

feat: Create textarea component with floating label and auto-resize

feat: Create card component for displaying content with header and footer

feat: Implement data table component for displaying tabular data

feat: Implement data view component for list and grid layouts with actions

--- a/angular.json
+++ b/angular.json
@@ -118,5 +118,8 @@
     "@schematics/angular:resolver": {
       "typeSeparator": "."
     }
+  },
+  "cli": {
+    "analytics": "e9d960ce-3b5c-4ed3-969a-8554eef7683e"
   }
 }
